@@ -5,6 +5,7 @@
 .id.local.param { color: #000040 }
 .id.local.upvalue { color: #0000ff }
 .id.local.unused { color: #ffffff; background-color: #000080 }
+.id.local.ignore { color: inherit; background-color: inherit }
 .id.global.known { color: #800000 }
 .id.global.unknown { color: white; background-color: red }
 .id.field.known { color: #600000 }
@@ -16,6 +17,7 @@
 .keyword.highlight { text-decoration: underline }
 .masking { text-decoration: underline }
 .masked { /*text-decoration: line-through*/ }
+.ignore { text-decoration: inherit }
 .warn { border-bottom:1px dotted #808000 }
 
 .id.highlight {background-color: #ffe0e0}
