@@ -17,6 +17,7 @@ local function definelocal(scope, name, ast)
     ast.localmasking = scope[name]
   end
   scope[name] = ast
+  if name == '_' then ast.isignore = true end
 end
 
 -- Resolves scoping and usages of variable in AST.
@@ -29,6 +30,7 @@ end
 --   ast.isparam is true iff ast is a lexical definition and a function parameter.
 --   ast.isset is true iff ast is a lexical definition and exists an assignment on it.
 --   ast.isused is true iff ast is a lexical definition and has been referred to.
+--   ast.isignore is true if local variable should be ignored (e.g. typically "_")
 --   ast.localmasking - for a lexical definition, this is set to the lexical definition
 --     this is masking (i.e. same name).  nil if not masking.
 --   ast.localmasked - true iff lexical definition masked by another lexical definition.
