@@ -1,5 +1,8 @@
 Change Log.
 
+20120126
+  [+] Ignore locals named '_' in unused/masking variable reporting.
+
 20111224
   [+] html/delimited: export type information (in same manner as SciTE)
   [*] html: improve line number CSS treatment. e.g. don't include in copy/paste
